src/objects/Diagnosis_Code__c.object
<CustomObject>
    <description>The diagnosis codes on the Prior Authorization</description>
    <fields>
        <fullName>Diagnosis_Code__c</fullName>
        <description>Diagnosis Code on the Prior Authorization.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Diagnosis Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Diagnosis_Description__c</fullName>
        <description>Description of the diagnosis code.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Diagnosis Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Diagnosis__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the diagnosis code is the primary diagnosis</description>
        <label>Primary Diagnosis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Diagnosis Codes</relationshipLabel>
        <relationshipName>Diagnosis_CodesWO</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Diagnosis Code</label>
    <nameField>
        <displayFormat>DX-{00000}</displayFormat>
        <label>Diagnosis Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Diagnosis Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>